made all activities landscape

--- a/Connected_Health_App/app/src/main/AndroidManifest.xml
+++ b/Connected_Health_App/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".InformationViewActivity"
             android:label="@string/title_activity_information_view"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="au.edu.adelaide.connected_health_app.MainActivity" />
@@ -37,7 +38,8 @@
         <activity
             android:name=".QuestionnaireViewActivity"
             android:label="@string/title_activity_questionnaire_view"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="au.edu.adelaide.connected_health_app.MainActivity" />
@@ -45,7 +47,8 @@
         <activity
             android:name=".ProfileViewActivity"
             android:label="@string/title_activity_profile_view"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="au.edu.adelaide.connected_health_app.MainActivity" />
