Hide previous/next button in single item view when there is no next/previous item

--- a/Connected_Health_App/app/src/main/AndroidManifest.xml
+++ b/Connected_Health_App/app/src/main/AndroidManifest.xml
@@ -113,6 +113,10 @@
             android:name=".SingleItemDeleteActivity"
             android:label="@string/title_activity_single_item_delete" >
         </activity>
+        <activity
+            android:name=".QuestionnaireCompleteViewActivity"
+            android:label="@string/title_activity_questionnaire_complete_view" >
+        </activity>
     </application>
 
 </manifest>
