--- a/grailsApp/ConnectedHealth/.gitignore
+++ b/grailsApp/ConnectedHealth/.gitignore
@@ -9,7 +9,6 @@ stacktrace.log
 /*DB.*
 /cobertura.ser
 .DS_Store
-/target/
 /out/
 /web-app/plugins
 /web-app/WEB-INF/classes
@@ -17,3 +16,98 @@ stacktrace.log
 /target-eclipse/
 /.idea/workspace.xml
 /.idea/tasks.xml
+
+\target\classes
+\target\classes\connectedhealth
+\target\classes\views
+\target\work\plugin-build-classes
+\target\work\plugin-classes
+\target\work\plugin-provided-classes
+\target\work\resources
+\target\work\scriptCache
+\target\work\tomcat
+\target\work\plugin-build-classes\org
+\target\work\plugin-build-classes\org\grails
+\target\work\plugin-build-classes\org\grails\plugins
+\target\work\plugin-build-classes\org\grails\plugins\tomcat
+\target\work\plugin-build-classes\org\grails\plugins\tomcat\fork
+\target\work\plugin-classes\asset
+\target\work\plugin-classes\grails
+\target\work\plugin-classes\org
+\target\work\plugin-classes\asset\pipeline
+\target\work\plugin-classes\asset\pipeline\grails
+\target\work\plugin-classes\asset\pipeline\processors
+\target\work\plugin-classes\grails\plugin
+\target\work\plugin-classes\grails\plugin\cache
+\target\work\plugin-classes\grails\plugin\databasemigration
+\target\work\plugin-classes\grails\plugin\webxml
+\target\work\plugin-classes\grails\plugin\cache\compiler
+\target\work\plugin-classes\grails\plugin\cache\util
+\target\work\plugin-classes\grails\plugin\cache\web
+\target\work\plugin-classes\grails\plugin\cache\web\filter
+\target\work\plugin-classes\grails\plugin\cache\web\filter\simple
+\target\work\plugin-classes\grails\plugin\databasemigration\dbdoc
+\target\work\plugin-classes\org\codehaus
+\target\work\plugin-classes\org\groovydev
+\target\work\plugin-classes\org\codehaus\groovy
+\target\work\plugin-classes\org\codehaus\groovy\grails
+\target\work\plugin-classes\org\codehaus\groovy\grails\plugins
+\target\work\plugin-classes\org\codehaus\groovy\grails\scaffolding
+\target\work\plugin-classes\org\codehaus\groovy\grails\plugins\jquery
+\target\work\plugin-classes\org\codehaus\groovy\grails\scaffolding\view
+\target\work\plugins\asset-pipeline-1.9.9
+\target\work\plugins\cache-1.1.8
+\target\work\plugins\database-migration-1.4.0
+\target\work\plugins\hibernate4-4.3.6.1
+\target\work\plugins\jquery-1.11.1
+\target\work\plugins\scaffolding-2.1.2
+\target\work\plugins\tomcat-7.0.55
+\target\work\plugins\webxml-1.4.1
+\target\work\resources\asset
+\target\work\resources\connectedhealth
+\target\work\resources\grails
+\target\work\resources\grails-app
+\target\work\resources\hibernate
+\target\work\resources\org
+\target\work\resources\plugins
+\target\work\resources\spring
+\target\work\resources\uglifyjs
+\target\work\resources\views
+\target\work\resources\asset\pipeline
+\target\work\resources\asset\pipeline\grails
+\target\work\resources\asset\pipeline\processors
+\target\work\resources\grails\plugin
+\target\work\resources\grails\plugin\cache
+\target\work\resources\grails\plugin\databasemigration
+\target\work\resources\grails\plugin\webxml
+\target\work\resources\grails\plugin\cache\compiler
+\target\work\resources\grails\plugin\cache\util
+\target\work\resources\grails\plugin\cache\web
+\target\work\resources\grails\plugin\cache\web\filter
+\target\work\resources\grails\plugin\cache\web\filter\simple
+\target\work\resources\grails\plugin\databasemigration\dbdoc
+\target\work\resources\grails-app\i18n
+\target\work\resources\org\codehaus
+\target\work\resources\org\grails
+\target\work\resources\org\codehaus\groovy
+\target\work\resources\org\codehaus\groovy\grails
+\target\work\resources\org\codehaus\groovy\grails\plugins
+\target\work\resources\org\codehaus\groovy\grails\scaffolding
+\target\work\resources\org\codehaus\groovy\grails\plugins\jquery
+\target\work\resources\org\codehaus\groovy\grails\scaffolding\view
+\target\work\resources\org\grails\plugins
+\target\work\resources\org\grails\plugins\tomcat
+\target\work\resources\org\grails\plugins\tomcat\fork
+\target\work\resources\uglifyjs\bin
+\target\work\resources\uglifyjs\lib
+\target\work\resources\uglifyjs\test
+\target\work\resources\uglifyjs\tmp
+\target\work\resources\uglifyjs\test\unit
+\target\work\resources\uglifyjs\test\unit\compress
+\target\work\resources\uglifyjs\test\unit\compress\expected
+\target\work\resources\uglifyjs\test\unit\compress\test
+\target\work\tomcat\webapps
+\target\work\tomcat\work
+\target\work\tomcat\work\Tomcat
+\target\work\tomcat\work\Tomcat\localhost
+\target\work\tomcat\work\Tomcat\localhost\ConnectedHealth
